<resources>
    <string name="app_name">AgendaContactos</string>
    <string name="action_settings">Herramientas</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="siguiente">Siguiente</string>
    <string name="previo">Previo</string>

    <string name="error">Todos los campos son obligatorios</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="empresa">Empresa</string>
    <string name="nombre_direccion">Nombre dirección (Casa/Piso/Chalet/Pueblo)</string>
    <string name="provincia">Provincia</string>
    <string name="calle">Calle</string>
    <string name="numero">Número</string>
    <string name="codigo_postal">Código Postal</string>
    <string name="nombre_telefono">Nombre teléfono (Fijo/Móvil/Casa/Trabajo)</string>
    <string name="numero_telefono">Número de teléfono</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
</resources>