<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewContactoActivity">

    <EditText
        android:id="@+id/txtNombreAddContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtApellidosAddContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtEmpresaAddContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/empresa"
        android:inputType="textPersonName" />

    <ListView
        android:id="@+id/contenedorTelefonos"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <ListView
        android:id="@+id/contenedorDirecciones"
        android:layout_width="match_parent"
        android:layout_height="50dp">

    </ListView>

    <Button
        android:id="@+id/btnGuardarAddContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/guardar" />
</LinearLayout>